@@ -3,6 +3,7 @@ Ver.
 - Bugfix - CreatePersonAction, CreateInterventionAsync, fix for people that set their status to Active for the first time (#90)
 - Feature - First update for gamification (migration added)(#87)
 - Feature - Order of GetTips set based on CrisisPhase (#92)
+- Feature - Scope property added to Communication entity (migration added)(#88)
 
 Ver. 3.7.2 - 2022-04-26
 --------------------------------
